--- a/colunch-dev/project.yml
+++ b/colunch-dev/project.yml
@@ -1,19 +1,15 @@
 parameters: {}
 environment: {}
 packages:
-    - name: sample
+    - name: extract_transcript_from_audio
       shared: false
       environment: {}
       parameters: {}
       annotations: {}
       functions:
-        - name: hello
+        - name: function
           binary: false
           main: ""
           runtime: python:default
           web: true
           webSecure: false
-          parameters: {}
-          environment: {}
-          annotations: {}
-          limits: {}
